# summarization-pydantic-ai

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
api/capability/: index.html
api/limit-warner/: index.html
api/processor/: index.html
api/sliding-window/: index.html
api/types/: index.html
changelog/: index.html
concepts/: index.html
concepts/capability/: index.html
concepts/limit-warner/: index.html
concepts/processor/: index.html
concepts/sliding-window/: index.html
concepts/triggers/: index.html
docs/: changelog.md  getting-help.md  index.md  installation.md
docs/advanced/: context-manager.md
docs/api/: capability.md  index.md  limit-warner.md  middleware.md  processor.md  sliding-window.md  types.md
docs/concepts/: capability.md  index.md  limit-warner.md  processor.md  sliding-window.md  triggers.md
docs/examples/: advanced.md  basic-usage.md  context-manager.md  index.md
docs/includes/: abbreviations.md
docs/stylesheets/: extra.css
examples/: 01_basic_context_manager.py  02_persistence_and_resume.py  03_callbacks_and_reinjection.py  04_auto_max_tokens.py  05_interactive_chat.py  06_standalone_processors.py  07_capability_usage.py  README.md  index.html
examples/advanced/: index.html
examples/basic-usage/: index.html
examples/context-manager/: index.html
getting-help/: index.html
includes/abbreviations/: index.html
installation/: index.html
overrides/: main.html
search/: search_index.json
src/pydantic_ai_summarization/: __init__.py  _cutoff.py  capability.py  limit_warner.py  middleware.py  processor.py  sliding_window.py  types.py
stylesheets/: extra.css
tests/: __init__.py  test_capability.py  test_cutoff.py  test_limit_warner.py  test_middleware.py  test_processor.py  test_sliding_window.py  test_system_prompt_preservation.py
